commited the despre-noi page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,21 @@
         </div>
         <div class="menu-container">
           <ul class="menu-list">
-            <li class="menu-list-items active">Meniu Principal</li>
-            <li class="menu-list-items">Filme</li>
-            <li class="menu-list-items">Filme Populare</li>
-            <li class="menu-list-items">Seriale</li>
-            <li class="menu-list-items">Despre Noi</li>
+            <li class="menu-list-items active">
+              <a href="meniu-principal/index.html">Meniu Principal</a>
+            </li>
+            <li class="menu-list-items">
+              <a href="filme/index.html">Filme</a>
+            </li>
+            <li class="menu-list-items">
+              <a href="filme-populare/index.html">Filme Populare</a>
+            </li>
+            <li class="menu-list-items">
+              <a href="seriale/index.html">Seriale</a>
+            </li>
+            <li class="menu-list-items">
+              <a href="despre-noi/index.html">Despre Noi</a>
+            </li>
           </ul>
         </div>
         <div class="profile-container">
@@ -41,6 +51,7 @@
             <span class="profile-text">Profil</span>
             <i class="fa-solid fa-circle-chevron-down"></i>
           </div>
+          <!-- Light/Dark Mode Toggle -->
           <div class="toggle">
             <i class="fa-solid fa-lightbulb toggle-icon"></i>
             <i class="fa-regular fa-lightbulb toggle-icon"></i>
